[gd_scene load_steps=7 format=3 uid="uid://d1q0bhmlv80sl"]

[ext_resource type="Script" path="res://scenes/king_tower.gd" id="1_3dej4"]
[ext_resource type="Texture2D" uid="uid://cw5xn73r2enu1" path="res://assets/castillo/castillo.svg" id="2_7bp2p"]
[ext_resource type="PackedScene" uid="uid://cg62420mdncpj" path="res://scenes/health_bar.tscn" id="3_3s8qc"]
[ext_resource type="Texture2D" uid="uid://b8toop6exr7hm" path="res://assets/castillo/bandera.svg" id="3_jukll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ysl2i"]
size = Vector2(112, 62)

[sub_resource type="CircleShape2D" id="CircleShape2D_apcef"]
radius = 96.0

[node name="king_tower" type="CharacterBody2D"]
script = ExtResource("1_3dej4")

[node name="spr_ktower" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -40)
texture = ExtResource("2_7bp2p")

[node name="bandera_roja" type="Sprite2D" parent="spr_ktower"]
position = Vector2(24, -72)
texture = ExtResource("3_jukll")

[node name="bandera_azul" type="Sprite2D" parent="spr_ktower"]
position = Vector2(24, -72)
texture = ExtResource("3_jukll")

[node name="col_tower" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_ysl2i")

[node name="hurt_time" type="Timer" parent="."]

[node name="health_bar" parent="." instance=ExtResource("3_3s8qc")]
position = Vector2(0, -40)

[node name="damage_area" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="col_area" type="CollisionShape2D" parent="damage_area"]
shape = SubResource("CircleShape2D_apcef")
debug_color = Color(0.972549, 0, 0.45098, 0.419608)
metadata/_edit_lock_ = true

[connection signal="timeout" from="hurt_time" to="." method="_on_hurt_time_timeout"]
